增加角色，注册，登录，鉴权等
